--- a/richmondchat/auth.storyboard
+++ b/richmondchat/auth.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="tI4-I2-cjf">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Login View Controller-->
         <scene sceneID="L1G-PT-nUP">
             <objects>
-                <viewController id="HLd-Zt-2mW" sceneMemberID="viewController">
+                <viewController id="HLd-Zt-2mW" customClass="LoginViewController" customModule="richmondchat" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="onZ-zU-af3"/>
                         <viewControllerLayoutGuide type="bottom" id="z7P-O1-eyQ"/>
@@ -22,7 +22,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="ez9-Ha-wvL">
-                                <rect key="frame" x="10" y="120" width="355" height="60"/>
+                                <rect key="frame" x="10" y="164" width="355" height="60"/>
                                 <subviews>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Lco-Ff-fbl">
                                         <rect key="frame" x="0.0" y="0.0" width="355" height="30"/>
@@ -47,29 +47,47 @@
                                     <constraint firstItem="Jgl-EB-jRJ" firstAttribute="leading" secondItem="ez9-Ha-wvL" secondAttribute="leading" id="rgA-5f-wc2"/>
                                 </constraints>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PiE-oB-Sp6">
-                                <rect key="frame" x="164.5" y="380" width="46" height="30"/>
-                                <state key="normal" title="Button"/>
-                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oY6-Xc-M2L">
+                                <rect key="frame" x="141" y="372" width="93" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PiE-oB-Sp6">
+                                        <rect key="frame" x="0.0" y="0.0" width="38" height="30"/>
+                                        <state key="normal" title="Login"/>
+                                        <connections>
+                                            <action selector="loginButtonTapped:" destination="HLd-Zt-2mW" eventType="touchUpInside" id="mzq-xm-1mq"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SDp-Gx-um1">
+                                        <rect key="frame" x="38" y="0.0" width="55" height="30"/>
+                                        <state key="normal" title="Sign Up"/>
+                                        <connections>
+                                            <segue destination="rjq-vN-7LN" kind="show" id="Nxc-f3-brX"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="ez9-Ha-wvL" firstAttribute="leading" secondItem="zqF-IM-iJL" secondAttribute="leading" constant="10" id="0tK-8N-b6s"/>
-                            <constraint firstItem="PiE-oB-Sp6" firstAttribute="centerX" secondItem="zqF-IM-iJL" secondAttribute="centerX" id="4L5-S5-ngz"/>
                             <constraint firstAttribute="trailing" secondItem="ez9-Ha-wvL" secondAttribute="trailing" constant="10" id="6ao-0z-G5D"/>
-                            <constraint firstItem="PiE-oB-Sp6" firstAttribute="top" secondItem="ez9-Ha-wvL" secondAttribute="bottom" constant="200" id="lW8-8B-Joj"/>
                             <constraint firstItem="ez9-Ha-wvL" firstAttribute="top" secondItem="onZ-zU-af3" secondAttribute="bottom" constant="100" id="oaQ-5C-g5g"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="gUd-CY-mdr"/>
+                    <connections>
+                        <outlet property="emailTextField" destination="Lco-Ff-fbl" id="iIl-mo-3ms"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2vD-D6-W9L" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-334" y="-46"/>
+            <point key="canvasLocation" x="604" y="-46.326836581709152"/>
         </scene>
-        <!--View Controller-->
+        <!--Sign Up View Controller-->
         <scene sceneID="ffB-qD-3E4">
             <objects>
-                <viewController id="rjq-vN-7LN" sceneMemberID="viewController">
+                <viewController id="rjq-vN-7LN" customClass="SignUpViewController" customModule="richmondchat" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="je7-8z-JrX"/>
                         <viewControllerLayoutGuide type="bottom" id="4KK-i6-jtB"/>
@@ -116,6 +134,9 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Llg-ig-vcI">
                                 <rect key="frame" x="160" y="410" width="55" height="30"/>
                                 <state key="normal" title="Sign Up"/>
+                                <connections>
+                                    <action selector="signUpButtonTapped:" destination="rjq-vN-7LN" eventType="touchUpInside" id="lCd-MY-09s"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -127,10 +148,33 @@
                             <constraint firstItem="ary-R4-BPq" firstAttribute="top" secondItem="je7-8z-JrX" secondAttribute="bottom" constant="100" id="zzC-Sc-acc"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="confirmPasswordTextField" destination="lt8-dU-Aaq" id="K87-gC-53e"/>
+                        <outlet property="emailTextField" destination="2qB-JL-oxi" id="gV5-Ne-Agr"/>
+                        <outlet property="passwordTextField" destination="r8f-dP-9Y2" id="rwz-JA-2Nc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eHp-JG-RH4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="373.60000000000002" y="-46.326836581709152"/>
+            <point key="canvasLocation" x="1312.8" y="-46.326836581709152"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="M2L-qq-Bzx">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="tI4-I2-cjf" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="liD-Jn-Wzz">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="HLd-Zt-2mW" kind="relationship" relationship="rootViewController" id="qoi-xh-azL"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SnV-9T-8oj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-335.19999999999999" y="-46.326836581709152"/>
         </scene>
     </scenes>
 </document>
